parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> BlocosCodigo
Rule 2     BlocosCodigo -> Codigo
Rule 3     BlocosCodigo -> BlocosCodigo Codigo
Rule 4     Codigo -> Declaracao
Rule 5     Declaracao -> INT ID ;
Rule 6     Declaracao -> INT ID = Expressao ;
Rule 7     Declaracao -> INT BlocoLerSTDIN
Rule 8     Codigo -> Atribuicao
Rule 9     Atribuicao -> ID = Expressao ;
Rule 10    Atribuicao -> ID = Bloco_CALLFUNC
Rule 11    Expressao -> Var
Rule 12    Var -> NUM
Rule 13    Var -> ID
Rule 14    Var -> TRUE
Rule 15    Var -> FALSE
Rule 16    Expressao -> Expressao Operador Var
Rule 17    Expressao -> ( Expressao )
Rule 18    Operador -> +
Rule 19    Operador -> -
Rule 20    Operador -> *
Rule 21    Operador -> /
Rule 22    Operador -> %
Rule 23    Codigo -> BlocoIF
Rule 24    BlocoIF -> IF ( ListaCondicionais ) { BlocosCodigo }
Rule 25    BlocoIF -> IF ( ListaCondicionais ) { BlocosCodigo } ELSE { BlocosCodigo }
Rule 26    ListaCondicionais -> Condicional
Rule 27    ListaCondicionais -> ( ListaCondicionais )
Rule 28    ListaCondicionais -> ! ( ListaCondicionais )
Rule 29    ListaCondicionais -> ListaCondicionais OperadorLogico Condicional
Rule 30    OperadorLogico -> AND
Rule 31    OperadorLogico -> OR
Rule 32    Condicional -> Var
Rule 33    Condicional -> ! ( Condicional )
Rule 34    Condicional -> ( Condicional )
Rule 35    Condicional -> Condicional OperadorCondicional Condicional
Rule 36    OperadorCondicional -> >
Rule 37    OperadorCondicional -> BIGEQUAL
Rule 38    OperadorCondicional -> <
Rule 39    OperadorCondicional -> LESSEREQUAL
Rule 40    OperadorCondicional -> EQUALS
Rule 41    OperadorCondicional -> NOTEQUALS
Rule 42    Codigo -> BlocoWhileDo
Rule 43    BlocoWhileDo -> WHILE ( ListaCondicionais ) DO { BlocosCodigo }
Rule 44    Codigo -> BlocoLerSTDIN
Rule 45    BlocoLerSTDIN -> ID = STDIN ( ) ;
Rule 46    Codigo -> Bloco_EscreverSTDOUT
Rule 47    Bloco_EscreverSTDOUT -> STDOUT ( Var ) ;
Rule 48    Bloco_EscreverSTDOUT -> STDOUT ( PAL ) ;
Rule 49    Codigo -> Bloco_Comentario
Rule 50    Bloco_Comentario -> COMMENT
Rule 51    Codigo -> Bloco_DEFINEFUNC
Rule 52    Bloco_DEFINEFUNC -> DEFINE FUNC ( ) { BlocosCodigo }
Rule 53    Bloco_DEFINEFUNC -> DEFINE FUNC ( ListaAtributos ) { BlocosCodigo }
Rule 54    ListaAtributos -> Atributo
Rule 55    ListaAtributos -> ListaAtributos , Atributo
Rule 56    Atributo -> INT
Rule 57    Codigo -> Bloco_CALLFUNC
Rule 58    Bloco_CALLFUNC -> CALL FUNC ( ) ;
Rule 59    Bloco_CALLFUNC -> CALL FUNC ( INPUTVar ) ;
Rule 60    INPUTVar -> Var
Rule 61    INPUTVar -> INPUTVar , Var

Terminals, with rules where they appear

!                    : 28 33
%                    : 22
(                    : 17 24 25 27 28 33 34 43 45 47 48 52 53 58 59
)                    : 17 24 25 27 28 33 34 43 45 47 48 52 53 58 59
*                    : 20
+                    : 18
,                    : 55 61
-                    : 19
/                    : 21
;                    : 5 6 9 45 47 48 58 59
<                    : 38
=                    : 6 9 10 45
>                    : 36
AND                  : 30
BIGEQUAL             : 37
CALL                 : 58 59
COMMENT              : 50
DEFINE               : 52 53
DO                   : 43
ELSE                 : 25
EQUALS               : 40
FALSE                : 15
FUNC                 : 52 53 58 59
ID                   : 5 6 9 10 13 45
IF                   : 24 25
INT                  : 5 6 7 56
LESSEREQUAL          : 39
NOTEQUALS            : 41
NUM                  : 12
OR                   : 31
PAL                  : 48
STDIN                : 45
STDOUT               : 47 48
TRUE                 : 14
WHILE                : 43
error                : 
{                    : 24 25 25 43 52 53
}                    : 24 25 25 43 52 53

Nonterminals, with rules where they appear

Atribuicao           : 8
Atributo             : 54 55
BlocoIF              : 23
BlocoLerSTDIN        : 7 44
BlocoWhileDo         : 42
Bloco_CALLFUNC       : 10 57
Bloco_Comentario     : 49
Bloco_DEFINEFUNC     : 51
Bloco_EscreverSTDOUT : 46
BlocosCodigo         : 1 3 24 25 25 43 52 53
Codigo               : 2 3
Condicional          : 26 29 33 34 35 35
Declaracao           : 4
Expressao            : 6 9 16 17
INPUTVar             : 59 61
ListaAtributos       : 53 55
ListaCondicionais    : 24 25 27 28 29 43
Operador             : 16
OperadorCondicional  : 35
OperadorLogico       : 29
Programa             : 0
Var                  : 11 16 32 47 60 61

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . BlocosCodigo
    (2) BlocosCodigo -> . Codigo
    (3) BlocosCodigo -> . BlocosCodigo Codigo
    (4) Codigo -> . Declaracao
    (8) Codigo -> . Atribuicao
    (23) Codigo -> . BlocoIF
    (42) Codigo -> . BlocoWhileDo
    (44) Codigo -> . BlocoLerSTDIN
    (46) Codigo -> . Bloco_EscreverSTDOUT
    (49) Codigo -> . Bloco_Comentario
    (51) Codigo -> . Bloco_DEFINEFUNC
    (57) Codigo -> . Bloco_CALLFUNC
    (5) Declaracao -> . INT ID ;
    (6) Declaracao -> . INT ID = Expressao ;
    (7) Declaracao -> . INT BlocoLerSTDIN
    (9) Atribuicao -> . ID = Expressao ;
    (10) Atribuicao -> . ID = Bloco_CALLFUNC
    (24) BlocoIF -> . IF ( ListaCondicionais ) { BlocosCodigo }
    (25) BlocoIF -> . IF ( ListaCondicionais ) { BlocosCodigo } ELSE { BlocosCodigo }
    (43) BlocoWhileDo -> . WHILE ( ListaCondicionais ) DO { BlocosCodigo }
    (45) BlocoLerSTDIN -> . ID = STDIN ( ) ;
    (47) Bloco_EscreverSTDOUT -> . STDOUT ( Var ) ;
    (48) Bloco_EscreverSTDOUT -> . STDOUT ( PAL ) ;
    (50) Bloco_Comentario -> . COMMENT
    (52) Bloco_DEFINEFUNC -> . DEFINE FUNC ( ) { BlocosCodigo }
    (53) Bloco_DEFINEFUNC -> . DEFINE FUNC ( ListaAtributos ) { BlocosCodigo }
    (58) Bloco_CALLFUNC -> . CALL FUNC ( ) ;
    (59) Bloco_CALLFUNC -> . CALL FUNC ( INPUTVar ) ;

    INT             shift and go to state 13
    ID              shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    STDOUT          shift and go to state 17
    COMMENT         shift and go to state 18
    DEFINE          shift and go to state 19
    CALL            shift and go to state 20

    Programa                       shift and go to state 1
    BlocosCodigo                   shift and go to state 2
    Codigo                         shift and go to state 3
    Declaracao                     shift and go to state 4
    Atribuicao                     shift and go to state 5
    BlocoIF                        shift and go to state 6
    BlocoWhileDo                   shift and go to state 7
    BlocoLerSTDIN                  shift and go to state 8
    Bloco_EscreverSTDOUT           shift and go to state 9
    Bloco_Comentario               shift and go to state 10
    Bloco_DEFINEFUNC               shift and go to state 11
    Bloco_CALLFUNC                 shift and go to state 12

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> BlocosCodigo .
    (3) BlocosCodigo -> BlocosCodigo . Codigo
    (4) Codigo -> . Declaracao
    (8) Codigo -> . Atribuicao
    (23) Codigo -> . BlocoIF
    (42) Codigo -> . BlocoWhileDo
    (44) Codigo -> . BlocoLerSTDIN
    (46) Codigo -> . Bloco_EscreverSTDOUT
    (49) Codigo -> . Bloco_Comentario
    (51) Codigo -> . Bloco_DEFINEFUNC
    (57) Codigo -> . Bloco_CALLFUNC
    (5) Declaracao -> . INT ID ;
    (6) Declaracao -> . INT ID = Expressao ;
    (7) Declaracao -> . INT BlocoLerSTDIN
    (9) Atribuicao -> . ID = Expressao ;
    (10) Atribuicao -> . ID = Bloco_CALLFUNC
    (24) BlocoIF -> . IF ( ListaCondicionais ) { BlocosCodigo }
    (25) BlocoIF -> . IF ( ListaCondicionais ) { BlocosCodigo } ELSE { BlocosCodigo }
    (43) BlocoWhileDo -> . WHILE ( ListaCondicionais ) DO { BlocosCodigo }
    (45) BlocoLerSTDIN -> . ID = STDIN ( ) ;
    (47) Bloco_EscreverSTDOUT -> . STDOUT ( Var ) ;
    (48) Bloco_EscreverSTDOUT -> . STDOUT ( PAL ) ;
    (50) Bloco_Comentario -> . COMMENT
    (52) Bloco_DEFINEFUNC -> . DEFINE FUNC ( ) { BlocosCodigo }
    (53) Bloco_DEFINEFUNC -> . DEFINE FUNC ( ListaAtributos ) { BlocosCodigo }
    (58) Bloco_CALLFUNC -> . CALL FUNC ( ) ;
    (59) Bloco_CALLFUNC -> . CALL FUNC ( INPUTVar ) ;

    $end            reduce using rule 1 (Programa -> BlocosCodigo .)
    INT             shift and go to state 13
    ID              shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    STDOUT          shift and go to state 17
    COMMENT         shift and go to state 18
    DEFINE          shift and go to state 19
    CALL            shift and go to state 20

    Codigo                         shift and go to state 21
    Declaracao                     shift and go to state 4
    Atribuicao                     shift and go to state 5
    BlocoIF                        shift and go to state 6
    BlocoWhileDo                   shift and go to state 7
    BlocoLerSTDIN                  shift and go to state 8
    Bloco_EscreverSTDOUT           shift and go to state 9
    Bloco_Comentario               shift and go to state 10
    Bloco_DEFINEFUNC               shift and go to state 11
    Bloco_CALLFUNC                 shift and go to state 12

state 3

    (2) BlocosCodigo -> Codigo .

    INT             reduce using rule 2 (BlocosCodigo -> Codigo .)
    ID              reduce using rule 2 (BlocosCodigo -> Codigo .)
    IF              reduce using rule 2 (BlocosCodigo -> Codigo .)
    WHILE           reduce using rule 2 (BlocosCodigo -> Codigo .)
    STDOUT          reduce using rule 2 (BlocosCodigo -> Codigo .)
    COMMENT         reduce using rule 2 (BlocosCodigo -> Codigo .)
    DEFINE          reduce using rule 2 (BlocosCodigo -> Codigo .)
    CALL            reduce using rule 2 (BlocosCodigo -> Codigo .)
    $end            reduce using rule 2 (BlocosCodigo -> Codigo .)
    }               reduce using rule 2 (BlocosCodigo -> Codigo .)


state 4

    (4) Codigo -> Declaracao .

    INT             reduce using rule 4 (Codigo -> Declaracao .)
    ID              reduce using rule 4 (Codigo -> Declaracao .)
    IF              reduce using rule 4 (Codigo -> Declaracao .)
    WHILE           reduce using rule 4 (Codigo -> Declaracao .)
    STDOUT          reduce using rule 4 (Codigo -> Declaracao .)
    COMMENT         reduce using rule 4 (Codigo -> Declaracao .)
    DEFINE          reduce using rule 4 (Codigo -> Declaracao .)
    CALL            reduce using rule 4 (Codigo -> Declaracao .)
    $end            reduce using rule 4 (Codigo -> Declaracao .)
    }               reduce using rule 4 (Codigo -> Declaracao .)


state 5

    (8) Codigo -> Atribuicao .

    INT             reduce using rule 8 (Codigo -> Atribuicao .)
    ID              reduce using rule 8 (Codigo -> Atribuicao .)
    IF              reduce using rule 8 (Codigo -> Atribuicao .)
    WHILE           reduce using rule 8 (Codigo -> Atribuicao .)
    STDOUT          reduce using rule 8 (Codigo -> Atribuicao .)
    COMMENT         reduce using rule 8 (Codigo -> Atribuicao .)
    DEFINE          reduce using rule 8 (Codigo -> Atribuicao .)
    CALL            reduce using rule 8 (Codigo -> Atribuicao .)
    $end            reduce using rule 8 (Codigo -> Atribuicao .)
    }               reduce using rule 8 (Codigo -> Atribuicao .)


state 6

    (23) Codigo -> BlocoIF .

    INT             reduce using rule 23 (Codigo -> BlocoIF .)
    ID              reduce using rule 23 (Codigo -> BlocoIF .)
    IF              reduce using rule 23 (Codigo -> BlocoIF .)
    WHILE           reduce using rule 23 (Codigo -> BlocoIF .)
    STDOUT          reduce using rule 23 (Codigo -> BlocoIF .)
    COMMENT         reduce using rule 23 (Codigo -> BlocoIF .)
    DEFINE          reduce using rule 23 (Codigo -> BlocoIF .)
    CALL            reduce using rule 23 (Codigo -> BlocoIF .)
    $end            reduce using rule 23 (Codigo -> BlocoIF .)
    }               reduce using rule 23 (Codigo -> BlocoIF .)


state 7

    (42) Codigo -> BlocoWhileDo .

    INT             reduce using rule 42 (Codigo -> BlocoWhileDo .)
    ID              reduce using rule 42 (Codigo -> BlocoWhileDo .)
    IF              reduce using rule 42 (Codigo -> BlocoWhileDo .)
    WHILE           reduce using rule 42 (Codigo -> BlocoWhileDo .)
    STDOUT          reduce using rule 42 (Codigo -> BlocoWhileDo .)
    COMMENT         reduce using rule 42 (Codigo -> BlocoWhileDo .)
    DEFINE          reduce using rule 42 (Codigo -> BlocoWhileDo .)
    CALL            reduce using rule 42 (Codigo -> BlocoWhileDo .)
    $end            reduce using rule 42 (Codigo -> BlocoWhileDo .)
    }               reduce using rule 42 (Codigo -> BlocoWhileDo .)


state 8

    (44) Codigo -> BlocoLerSTDIN .

    INT             reduce using rule 44 (Codigo -> BlocoLerSTDIN .)
    ID              reduce using rule 44 (Codigo -> BlocoLerSTDIN .)
    IF              reduce using rule 44 (Codigo -> BlocoLerSTDIN .)
    WHILE           reduce using rule 44 (Codigo -> BlocoLerSTDIN .)
    STDOUT          reduce using rule 44 (Codigo -> BlocoLerSTDIN .)
    COMMENT         reduce using rule 44 (Codigo -> BlocoLerSTDIN .)
    DEFINE          reduce using rule 44 (Codigo -> BlocoLerSTDIN .)
    CALL            reduce using rule 44 (Codigo -> BlocoLerSTDIN .)
    $end            reduce using rule 44 (Codigo -> BlocoLerSTDIN .)
    }               reduce using rule 44 (Codigo -> BlocoLerSTDIN .)


state 9

    (46) Codigo -> Bloco_EscreverSTDOUT .

    INT             reduce using rule 46 (Codigo -> Bloco_EscreverSTDOUT .)
    ID              reduce using rule 46 (Codigo -> Bloco_EscreverSTDOUT .)
    IF              reduce using rule 46 (Codigo -> Bloco_EscreverSTDOUT .)
    WHILE           reduce using rule 46 (Codigo -> Bloco_EscreverSTDOUT .)
    STDOUT          reduce using rule 46 (Codigo -> Bloco_EscreverSTDOUT .)
    COMMENT         reduce using rule 46 (Codigo -> Bloco_EscreverSTDOUT .)
    DEFINE          reduce using rule 46 (Codigo -> Bloco_EscreverSTDOUT .)
    CALL            reduce using rule 46 (Codigo -> Bloco_EscreverSTDOUT .)
    $end            reduce using rule 46 (Codigo -> Bloco_EscreverSTDOUT .)
    }               reduce using rule 46 (Codigo -> Bloco_EscreverSTDOUT .)


state 10

    (49) Codigo -> Bloco_Comentario .

    INT             reduce using rule 49 (Codigo -> Bloco_Comentario .)
    ID              reduce using rule 49 (Codigo -> Bloco_Comentario .)
    IF              reduce using rule 49 (Codigo -> Bloco_Comentario .)
    WHILE           reduce using rule 49 (Codigo -> Bloco_Comentario .)
    STDOUT          reduce using rule 49 (Codigo -> Bloco_Comentario .)
    COMMENT         reduce using rule 49 (Codigo -> Bloco_Comentario .)
    DEFINE          reduce using rule 49 (Codigo -> Bloco_Comentario .)
    CALL            reduce using rule 49 (Codigo -> Bloco_Comentario .)
    $end            reduce using rule 49 (Codigo -> Bloco_Comentario .)
    }               reduce using rule 49 (Codigo -> Bloco_Comentario .)


state 11

    (51) Codigo -> Bloco_DEFINEFUNC .
